--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Algú ho havia de dir"
 description: "Personal blog"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: /mediumish-theme-jekyll
+baseurl: /blog
 include: ["_pages"]
 permalink: /:title/
 
@@ -57,6 +57,9 @@ kramdown:
   syntax_highlighter_opts:
     block:
       line_numbers: true
+
+
+remote_theme: wowthemesnet/mediumish-theme-jekyll
 
 # Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
 adsense: "disabled"
