--- a/_config.yml
+++ b/_config.yml
@@ -77,3 +77,4 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       comments: false
+theme: jekyll-theme-slate
