--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "Aleix"
-title: "Aleix"
+name: "aleixripoll"
+title: "aleixripoll"
 description: "Personal blog"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
